--- a/wesite/app/site/templates/nav.html
+++ b/wesite/app/site/templates/nav.html
@@ -22,22 +22,21 @@
 
         <!-- Chats -->
         <li class="nav-item mt-xl-9">
-            <a class="nav-link position-relative p-0 py-xl-3 active" data-toggle="tab" href="#" title="Chats" role="tab">
+            <a class="nav-link position-relative p-0 py-xl-3 active" data-toggle="tab" href="#" title="Feed" role="tab">
                 <i class="icon-lg fas fa-rss-square"></i>
-                <div class="badge badge-dot badge-primary badge-bottom-center"></div>
             </a>
         </li>
 
         <!-- Profile -->
         <li class="nav-item mt-xl-9" id="toggle">
-            <a class="nav-link position-relative p-0 py-xl-3" data-toggle="tab" href="#" title="User" role="tab">
+            <a class="nav-link position-relative p-0 py-xl-3" data-toggle="tab" href="#" title="Mode" role="tab">
                 <i class="icon-lg fas fa-moon"></i>
             </a>
         </li>
 
         <!-- Demo only: Documentation -->
         <li class="nav-item mt-xl-9 d-none d-xl-block flex-xl-grow-1">
-            <a class="nav-link position-relative p-0 py-xl-3" data-toggle="tab" href="#" title="Demos" role="tab">
+            <a class="nav-link position-relative p-0 py-xl-3" data-toggle="tab" href="#" title="Version" role="tab">
                 <i class="icon-lg fas fa-info-circle"></i>
             </a>
         </li>
