--- a/wesite/app/static/css/main.css
+++ b/wesite/app/static/css/main.css
@@ -3,7 +3,7 @@
     text-align: justify;
     padding-left: 10%;
     padding-right: 10%;
-    margin-bottom: 20%;
+    margin-bottom: 2%;
 }
 
 #content{
@@ -36,26 +36,25 @@
     right: 5px;
 }
 #back-to-top {
-    position: fixed;
-    bottom: 130px;
-    left: 445px;
+    position: absolute;
+    bottom: 70px;
+    float: left;
     z-index: 9999;
     width: 50px;
     height: 50px;
     border-radius: 100%;
     text-align: center;
     line-height: 55px;
-    background: #f5f5f5;
-    color: #444;
+    background: #0076fc;
+    color: #fff;
     cursor: pointer;
     border: 0;
-    border-radius: 2px;
     text-decoration: none;
     transition: opacity 0.2s ease-out;
     opacity: 1;
 }
 #back-to-top:hover {
-    background: #e9ebec;
+    background: #348df1;
 }
 #back-to-top.show {
     opacity: 1;
@@ -70,4 +69,7 @@
     left: 50px;
     border-radius: 100%;
     color: white;
+}
+#more{
+    margin-bottom: 20%;
 }
