--- a/wesite/app/site/templates/base.html
+++ b/wesite/app/site/templates/base.html
@@ -85,13 +85,13 @@
                 <div  class="text-muted">
                     <div id="awsome-content">
                         <div style="text-align:center; margin-top: 20%;">
-                        <div class="avatar avatar-lg mb-5">
-                            <img class="avatar-img" src="{{url_for('static', filename='images/brand.svg')}}" alt="">
-                        </div>
-  
-                        <h6>Hey, There!</h6>
-                        <p>Please select a feed to know more.</p>
-                      </div> 
+                            <div class="avatar avatar-lg mb-5 loading-image">
+                                <img class="" src="{{url_for('static', filename='images/loading.svg')}}" alt="">
+                            </div>
+    
+                            <h6>Hey, There!</h6>
+                            <p>Please select a feed to know more.</p>
+                        </div> 
                     </div>
                     <div class="btn-group" role="group" id="more">
                         <a class="btn btn-link" target="_blank" href="" id="more-btn" >More</a>|
