--- a/app/templates/verifycode.html
+++ b/app/templates/verifycode.html
@@ -224,7 +224,7 @@
                             <tbody>
                               <tr>
                                 <td style="padding: 10px;" valign="top" align="center">
-                                  <a href="http://example.com" style="text-decoration: none;"><img src="images/logo-white.png" alt="" style="height: auto; max-width: 100%; border: 0; line-height: 100%; outline: 0; -ms-interpolation-mode: bicubic; color: #ffffff; font-size: 14px;" width="130" height="22"></a>
+                                  <a href="#" style="text-decoration: none;"><img src="https://i.imgur.com/wWDhc32.png" alt="" style="height: auto; max-width: 100%; border: 0; line-height: 100%; outline: 0; -ms-interpolation-mode: bicubic; color: #ffffff; font-size: 14px;" width="130" height="22"></a>
                                 </td>
                               </tr>
                             </tbody>
@@ -260,7 +260,7 @@
                                           <table role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0">
                                             <tbody>
                                               <tr>
-                                                <td style="background-image: url('images/header-3-image-1.jpg'); background-position: top center; background-size: cover; background-color: #1B1B1B; border-radius: 6px" valign="top" bgcolor="#1B1B1B" background="images/header-3-image-1.jpg" align="center">
+                                                <td style="background-image: url('https://i.imgur.com/itOyIQ4.jpg'); background-position: top center; background-size: cover; background-color: #1B1B1B; border-radius: 6px" valign="top" bgcolor="#1B1B1B" background="https://i.imgur.com/itOyIQ4.jpg" align="center">
                                                   <!--[if gte mso 9]>
                                                 <v:rect xmlns:v="urn:schemas-microsoft-com:vml" fill="true" stroke="false" style="width: 520px;">
                                                     <v:fill type="frame" src="images/header-3-image-1.jpg" color="#1B1B1B"></v:fill>
@@ -400,13 +400,13 @@
                                               <tbody>
                                                 <tr>
                                                   <td style="font-family: Arial, sans-serif; font-size: 19px;" valign="top">
-                                                    <a href="http://example.com" style="text-decoration: none;"><img src="images/facebook-gray.png" alt="" style="border: 0; line-height: 100%; outline: 0; -ms-interpolation-mode: bicubic; font-size: 14px; color: #151515;" width="20" height="20"></a>
+                                                    <a href="#" style="text-decoration: none;"><img src="https://i.imgur.com/kRsZDoJ.png" alt="" style="border: 0; line-height: 100%; outline: 0; -ms-interpolation-mode: bicubic; font-size: 14px; color: #151515;" width="20" height="20"></a>
                                                     <span>&nbsp;&nbsp;</span>
-                                                    <a href="http://example.com" style="text-decoration: none;"><img src="images/twitter-gray.png" alt="" style="border: 0; line-height: 100%; outline: 0; -ms-interpolation-mode: bicubic; font-size: 14px; color: #151515;" width="21" height="18"></a>
+                                                    <a href="#" style="text-decoration: none;"><img src="https://i.imgur.com/r49lZmu.png" alt="" style="border: 0; line-height: 100%; outline: 0; -ms-interpolation-mode: bicubic; font-size: 14px; color: #151515;" width="21" height="18"></a>
                                                     <span>&nbsp;&nbsp;</span>
-                                                    <a href="http://example.com" style="text-decoration: none;"><img src="images/instagram-gray.png" alt="" style="border: 0; line-height: 100%; outline: 0; -ms-interpolation-mode: bicubic; font-size: 14px; color: #151515;" width="21" height="20"></a>
+                                                    <a href="#" style="text-decoration: none;"><img src="https://i.imgur.com/7mBh8U6.png" alt="" style="border: 0; line-height: 100%; outline: 0; -ms-interpolation-mode: bicubic; font-size: 14px; color: #151515;" width="21" height="20"></a>
                                                     <span>&nbsp;&nbsp;</span>
-                                                    <a href="http://example.com" style="text-decoration: none;"><img src="images/pinterest-gray.png" alt="" style="border: 0; line-height: 100%; outline: 0; -ms-interpolation-mode: bicubic; font-size: 14px; color: #151515;" width="20" height="20"></a>
+                                                    <a href="#" style="text-decoration: none;"><img src="https://i.imgur.com/O10qQOx.png" alt="" style="border: 0; line-height: 100%; outline: 0; -ms-interpolation-mode: bicubic; font-size: 14px; color: #151515;" width="20" height="20"></a>
                                                   </td>
                                                 </tr>
                                               </tbody>
