--- a/app/templates/verifycode.html
+++ b/app/templates/verifycode.html
@@ -260,7 +260,7 @@
                                           <table role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0">
                                             <tbody>
                                               <tr>
-                                                <td style="background-image: url('https://i.imgur.com/itOyIQ4.jpg'); background-position: top center; background-size: cover; background-color: #1B1B1B; border-radius: 6px" valign="top" bgcolor="#1B1B1B" background="https://i.imgur.com/itOyIQ4.jpg" align="center">
+                                                <td style="background-image: url('https://imgur.com/itOyIQ4'); background-position: top center; background-size: cover; background-color: #1B1B1B; border-radius: 6px" valign="top" bgcolor="#1B1B1B" background="https://imgur.com/itOyIQ4" align="center">
                                                   <!--[if gte mso 9]>
                                                 <v:rect xmlns:v="urn:schemas-microsoft-com:vml" fill="true" stroke="false" style="width: 520px;">
                                                     <v:fill type="frame" src="images/header-3-image-1.jpg" color="#1B1B1B"></v:fill>
