--- a/app/templates/verify_code.html
+++ b/app/templates/verify_code.html
@@ -261,7 +261,7 @@
                             </tbody>
                             <tbody>
                               <tr>
-                                <td class="pc-fb-font" style="font-family: 'Fira Sans', Helvetica, Arial, sans-serif; font-size: 20px; font-weight: 300; line-height: 28px; color: #1B1B1B; letter-spacing: -0.2px;" valign="top" align="center">Code: <strong>GMRW</strong></td>
+                                <td class="pc-fb-font" style="font-family: 'Fira Sans', Helvetica, Arial, sans-serif; font-size: 20px; font-weight: 300; line-height: 28px; color: #1B1B1B; letter-spacing: -0.2px;" valign="top" align="center">Code: <strong>{{code}}</strong></td>
                               </tr>
                               <tr>
                                 <td style="font-size: 1px; line-height: 1px;" height="15">&nbsp;</td>
