--- a/app/templates/delete_confirm.html
+++ b/app/templates/delete_confirm.html
@@ -287,7 +287,7 @@
                                     <tbody>
                                       <tr>
                                         <td style="border-radius: 8px; padding: 14px 19px; background-color: #1595E7;" valign="top" bgcolor="#1595E7" align="center">
-                                          <a class="pc-fb-font" href="http://example.com" style="text-decoration: none; word-break: break-word; line-height: 24px; letter-spacing: -0.2px; font-family: 'Fira Sans', Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 500; color: #ffffff; display: block;">Delete Account</a>
+                                          <a class="pc-fb-font" href={{link}} style="text-decoration: none; word-break: break-word; line-height: 24px; letter-spacing: -0.2px; font-family: 'Fira Sans', Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 500; color: #ffffff; display: block;">Delete Account</a>
                                         </td>
                                       </tr>
                                     </tbody>
