--- a/app/templates/welcome.html
+++ b/app/templates/welcome.html
@@ -392,7 +392,7 @@
                                                       <tbody>
                                                         <tr>
                                                           <td style="border-radius: 8px; padding: 14px 19px; background-color: #1595E7;" valign="top" bgcolor="#1595E7" align="center">
-                                                            <a class="pc-fb-font" href="http://example.com" style="text-decoration: none; display: block; line-height: 24px; letter-spacing: -0.2px; font-family: 'Fira Sans', Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 500; color: #ffffff;">Start now</a>
+                                                            <a class="pc-fb-font" href='https://odaaay.com/en/login' style="text-decoration: none; display: block; line-height: 24px; letter-spacing: -0.2px; font-family: 'Fira Sans', Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 500; color: #ffffff;">Start now</a>
                                                           </td>
                                                         </tr>
                                                       </tbody>
@@ -408,7 +408,7 @@
                                               <tbody>
                                                 <tr>
                                                   <td class="pc-fb-font" style="letter-spacing: -0.2px; line-height: 28px; font-family: 'Fira Sans', Helvetica, Arial, sans-serif; font-size: 18px; color: #9B9B9B; padding: 10px;" valign="top">
-                                                    Your username: <strong style="color: #151515; font-weight: 500;">Mikel3723</strong>
+                                                    Your username: <strong style="color: #151515; font-weight: 500;">{{name}}</strong>
                                                   </td>
                                                 </tr>
                                               </tbody>
