--- a/app/templates/subscription.html
+++ b/app/templates/subscription.html
@@ -283,7 +283,7 @@
                                     <tbody>
                                       <tr>
                                         <td valign="top" align="center">
-                                          <img src="images/content-14-image-1.jpg" alt="" style="max-width: 100%; height: auto; border: 0; text-decoration: none; line-height: 100%; outline: 0; -ms-interpolation-mode: bicubic; display: block; Margin: 0 auto;" width="74">
+                                          <img src="{{image_subbed}}" alt="" style="max-width: 100%; height: auto; border: 0; text-decoration: none; line-height: 100%; outline: 0; -ms-interpolation-mode: bicubic; display: block; Margin: 0 auto;" width="74">
                                         </td>
                                       </tr>
                                       <tr>
@@ -293,7 +293,7 @@
                                     <tbody>
                                       <tr>
                                         <td class="pc-fb-font" style="text-align: center; font-family: 'Fira Sans', Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 500; line-height: 21px; letter-spacing: -0.1px; color: #1B1B1B;" valign="top">
-                                          Woody Allen
+                                          {{subscribed_to}}
                                         </td>
                                       </tr>
                                       <tr>
