--- a/app/templates/stream.html
+++ b/app/templates/stream.html
@@ -42,7 +42,7 @@
     {
         var video = document.getElementById('video');
         var hls = new Hls();
-        hls.loadSource('http://104.238.191.159:8088/hls/test.m3u8');
+        hls.loadSource('http://104.238.191.159:8088/hls/fabien.m3u8');
         hls.attachMedia(video);
         hls.on(Hls.Events.MANIFEST_PARSED,function()
         {
@@ -62,7 +62,7 @@
     }
     else if (video.canPlayType('application/vnd.apple.mpegurl'))
     {
-        video.src = 'http://104.238.191.159:8088/hls/test.m3u8';
+        video.src = 'http://104.238.191.159:8088/hls/fabien.m3u8';
         video.addEventListener('canplay',function()
         {
           var playpromise=video.play();
